# voxels

./: .clangd  .gitignore  CMakeLists.txt  README.md  checks.json
data/levels/: cube64.txt  level0.json  level0.txt  level1.txt
data/shaders/: clear_comp.glsl  cone_tracing_frag.glsl  cone_tracing_frag2.glsl  cone_tracing_vert.glsl  drawcmd_comp.glsl  frag.glsl  line_frag.glsl  test_comp.glsl  test_frag.glsl  test_vert.glsl  vert.glsl  voxeltexture_comp.glsl
include/glad/: glad.h
lib/: CMakeLists.txt  glad.c
res/shaders/: frag.glsl  vert.glsl
src/: main.cpp
src/Voxels/: Application.cpp  Application.hpp  CMakeLists.txt  VoxelsApplication.cpp  VoxelsApplication.hpp  comptest.cpp  main.cpp  test.cpp
src/Voxels/core/: Camera.cpp  Camera.hpp  FreeListAllocator.hpp  ThreadPool.cpp  ThreadPool.hpp  Transform.hpp
src/Voxels/entity/: Entity.hpp
src/Voxels/entity/components/: CameraProperties.hpp  CharacterController.cpp  CharacterController.hpp  FlyPlayerController.cpp  FlyPlayerController.hpp  PlayerController.hpp  Q1PlayerController.cpp  Q1PlayerController.hpp  Q3PlayerController.cpp  Q3PlayerController.hpp  Transform.hpp
src/Voxels/io/: Input.cpp  Input.hpp
src/Voxels/opengl/: Shader.h
src/Voxels/player/: CharacterController.cpp  CharacterController.hpp  FlyPlayerController.cpp  FlyPlayerController.hpp  Q1PlayerController.cpp  Q1PlayerController.hpp  Q3PlayerController.cpp  Q3PlayerController.hpp
src/Voxels/ui/: UIManager.cpp  UIManager.hpp
src/Voxels/util/: Flags.h  Util.cpp  Util.hpp
src/Voxels/world/: Chunk.cpp  Chunk.hpp  GreedyMesher.cpp  GreedyMesher.hpp  Level.cpp  Level.hpp  Line.h  Mesher.cpp  Mesher.hpp  Primitive.hpp  RunMesher.cpp  RunMesher.hpp  VertexFormat.hpp  WorldManager.cpp  WorldManager.hpp  WorldMesh.cpp  WorldMesh.hpp
src/core/: Camera.cpp  Camera.hpp
src/opengl/: Shader.h
src/util/: Util.cpp  Util.hpp
src/world/: Chunk.cpp  Chunk.hpp  Mesher.cpp  Mesher.hpp  Noise.cpp  Noise.hpp
test/Voxels/: CMakeLists.txt
test/Voxels/core/: FreeListAllocatorTest.cpp
